syntax = "proto3";
import "Open-IM-Server/pkg/proto/sdkws/ws.proto";
option go_package = "Open_IM/pkg/proto/push;pbPush";
package push;

message PushMsgReq {
  sdkws.MsgData msgData = 1;
  string sourceID = 2;
}

message PushMsgResp{
}

message DelUserPushTokenReq{
  string userID = 1;
  int32 platformID = 2;
}

message DelUserPushTokenResp{
}

service PushMsgService {
  rpc PushMsg(PushMsgReq) returns(PushMsgResp);
  rpc DelUserPushToken(DelUserPushTokenReq) returns(DelUserPushTokenResp);
}

